{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 23,
  "lineage": "eed7db49-b01f-1a16-61a9-d2863e816f2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:internet-gateway/igw-0cba5cdef757b5367",
            "id": "igw-0cba5cdef757b5367",
            "owner_id": "568256617288",
            "tags": {
              "Name": "devops-cicd-aws-igw",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-igw",
              "Project": "devops-cicd-aws"
            },
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:route-table/rtb-0ad1c3ee4aadfb1ac",
            "id": "rtb-0ad1c3ee4aadfb1ac",
            "owner_id": "568256617288",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cba5cdef757b5367",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-cicd-aws-public-rt",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-public-rt",
              "Project": "devops-cicd-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04faa36e52fb5b63a",
            "route_table_id": "rtb-0ad1c3ee4aadfb1ac",
            "subnet_id": "subnet-08912c1dc5b489843"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034f8115a8b0896c8",
            "route_table_id": "rtb-0ad1c3ee4aadfb1ac",
            "subnet_id": "subnet-01e070101d02dcb00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:security-group/sg-05a3a3fda77b1f4ba",
            "description": "Security group for ECS app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a3a3fda77b1f4ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "devops-cicd-aws-app-sg",
            "name_prefix": "",
            "owner_id": "568256617288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cicd-aws-app-sg",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-app-sg",
              "Project": "devops-cicd-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:security-group/sg-08a3956d0aaaba7ea",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a3956d0aaaba7ea",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05a3a3fda77b1f4ba"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "devops-cicd-aws-db-sg",
            "name_prefix": "",
            "owner_id": "568256617288",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-cicd-aws-db-sg",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-db-sg",
              "Project": "devops-cicd-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:subnet/subnet-0430d9218cfbcbd54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0430d9218cfbcbd54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568256617288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cicd-aws-private-1",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-private-1",
              "Project": "devops-cicd-aws"
            },
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:subnet/subnet-0d2f7df57decdbd33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f7df57decdbd33",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568256617288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cicd-aws-private-2",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-private-2",
              "Project": "devops-cicd-aws"
            },
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:subnet/subnet-08912c1dc5b489843",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08912c1dc5b489843",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568256617288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cicd-aws-public-1",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-public-1",
              "Project": "devops-cicd-aws"
            },
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:subnet/subnet-01e070101d02dcb00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e070101d02dcb00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568256617288",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "devops-cicd-aws-public-2",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-public-2",
              "Project": "devops-cicd-aws"
            },
            "vpc_id": "vpc-024e9afc1edbc0ca6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:568256617288:vpc/vpc-024e9afc1edbc0ca6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b7f9393feb297ef4",
            "default_route_table_id": "rtb-0972bfcc1d3efa4ed",
            "default_security_group_id": "sg-0c67d5aa473c26080",
            "dhcp_options_id": "dopt-049f206c2be4638b6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-024e9afc1edbc0ca6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0972bfcc1d3efa4ed",
            "owner_id": "568256617288",
            "tags": {
              "Name": "devops-cicd-aws-vpc",
              "Project": "devops-cicd-aws"
            },
            "tags_all": {
              "Name": "devops-cicd-aws-vpc",
              "Project": "devops-cicd-aws"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}